--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "dependencies/fomus"]
 	path = dependencies/fomus
 	url = https://github.com/ormf/fomus.git
+[submodule "dependencies/weyl"]
+	path = dependencies/weyl
+	url = https://github.com/OdonataResearchLLC/weyl.git
