ASDF for Cope files (#70).

--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "dependencies/weyl"]
 	path = dependencies/weyl
 	url = https://github.com/OdonataResearchLLC/weyl.git
+[submodule "dependencies/cope/david-cope-cmmc"]
+	path = dependencies/cope/david-cope-cmmc
+	url = https://github.com/HeinrichApfelmus/david-cope-cmmc.git
