Fixed for latest NW.js, add downloads badge (#74).

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -245,6 +245,9 @@ caret.policy.yjumps=0
 #time.commands=1
 #caret.sticky=1
 #properties.directory.enable=1
+save.recent=1
+save.session=1
+
 
 # Status Bar
 statusbar.number=4
