Change to BASH script for running csound.node pieces in NW.js.

--- a/.commands.properties
+++ b/.commands.properties
@@ -9,8 +9,8 @@ command.go.subsystem.$(file.patterns.lisp)=0
 
 # Commands for running HTML files with embedded Csound in NW.js.
 
-command.go.$(file.patterns.html)=dofile /home/mkg/run_nwjs_application.lua
-command.go.subsystem.$(file.patterns.html)=3
+command.go.$(file.patterns.html)=~/run_nwjs_application.sh $(FileNameExt) $(FileName) $(FileDir)
+command.go.subsystem.$(file.patterns.html)=0
 
 # SciTE settings for Csound files (orchestra, score, and csd).
 
