--- a/CsoundForAndroid/Silence/app/src/main/cpp/CMakeLists.txt
+++ b/CsoundForAndroid/Silence/app/src/main/cpp/CMakeLists.txt
@@ -27,7 +27,6 @@ add_library( # Sets the name of the library.
 
 find_library( # Sets the name of the path variable.
               log-lib
-
               # Specifies the name of the NDK library that
               # you want CMake to locate.
               log )
@@ -38,7 +37,10 @@ find_library( # Sets the name of the path variable.
 
 target_link_libraries( # Specifies the target library.
                        native-lib
-
                        # Links the target library to the log library
                        # included in the NDK.
-                       ${log-lib} )
+                       ${log-lib}
+                       oboe)
+
+set (OBOE_HOME ../../../../../ndk-libraries/oboe)
+add_subdirectory(${OBOE_HOME} ./oboe)
