--- a/CsoundForAndroid/CsoundForAndroid/CsoundAndroid/build.gradle
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundAndroid/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
     buildToolsVersion '28.0.3'
     defaultConfig {
         minSdkVersion 22
-        targetSdkVersion 26
-        versionCode 2
+        targetSdkVersion 28
+        versionCode 3
         versionName "6.12.0"
     }
     buildTypes {
@@ -27,4 +27,12 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+
 }
