Trying CodeMirror in WebView as code editor (#80).

--- a/CsoundForAndroid/CsoundForAndroid/build.gradle
+++ b/CsoundForAndroid/CsoundForAndroid/build.gradle
@@ -49,7 +49,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-    }
+        maven {
+            url 'https://jitpack.io'
+        }    }
     allprojects {
         gradle.projectsEvaluated {
             tasks.withType(JavaCompile) {
