--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/build.gradle
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.github.Susmit-A:AndroidAceEditor:0.5.0'
 
 
 }
