--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/AndroidManifest.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/AndroidManifest.xml
@@ -22,12 +22,15 @@
         android:theme="@style/csoundTheme"
         android:icon="@drawable/cs"
         android:hardwareAccelerated="true"
-        android:allowBackup="false">
+        android:allowBackup="false"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
+            android:name=".CsoundAppActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:fitsSystemWindows="true"
             android:label="@string/app_name"
-            android:name=".CsoundAppActivity" 
-			android:screenOrientation="fullSensor" 
-			android:configChanges="orientation|keyboardHidden|screenSize">
+            android:screenOrientation="fullSensor"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
