--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/AndroidManifest.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" android:protectionLevel="signature"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.MANAGE_DOCUMENTS"/>
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
     <uses-permission android:name="android.permission.READ_LOGS"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
@@ -30,6 +31,7 @@
             android:fitsSystemWindows="true"
             android:label="@string/app_name"
             android:screenOrientation="fullSensor"
+            android:grantUriPermissions="true"
             android:windowSoftInputMode="adjustResize">
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
