--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -227,12 +227,12 @@ set(CPACK_DEBIAN_COMPONENT_INSTALL "ON")
 set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_SOURCE_DIR}/DEBIAN/triggers")
 set(CPACK_DEBIAN_PACKAGE_CONFLICTS "libcsoundac-dev, libcsoundac6.0v5")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "python")
-set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "Extends the sound programming language and library Csound.
- Additional features include the CsoundHtml5 'front end' for Csound wth HTML5,
- CsoundAC for algorithmic composition, the cmask opcode for algorithmic composition
- and granular synthesis, Common Music and nudruz libraries for algorithmic composition,
- csound.node to run Csound in the JavaScript context of NW.js, csound-wasm to run Csound
- in the JavaScript context of Web browsers, and others.")
+set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "Extends the sound programming language
+ and library Csound. Additional features include CsoundAC for algorithmic
+ composition, the cmask opcode for algorithmic composition
+ and granular synthesis, Common Music and nudruz libraries for algorithmic
+ composition,  csound.node to run Csound in the JavaScript context of NW.js,
+ csound-wasm to run Csound  in the JavaScript context of Web browsers, and others.")
 set(CPACK_DEBIAN_PACKAGE_ENHANCES "csound, libsound64-dev, csound-python, csoundqt")
 set(CPACK_DEBIAN_PACKAGE_GENERATE_SHLIBS "ON")
 set(CPACK_DEBIAN_PACKAGE_GENERATE_SHLIBS_POLICY ">=")
