Getting started with hybrid MCRM.

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -552,34 +552,34 @@ font.embedded.base=$(font.monospace)
 font.embedded.comment=$(font.monospace)
 font.vbs=$(font.monospace)
 
-colour.base03=#002b36
-colour.base02=#073642
-colour.base01=#586e75
-colour.base00=#657b83
-colour.base0=#839496
-colour.base1=#93a1a1
-colour.base2=#eee8d5
-colour.base3=#fdf6e3
-colour.yellow=#b58900
-colour.orange=#cb4b16
-colour.red=#dc322f
-colour.magenta=#d33682
-colour.violet=#6c71c4
-colour.blue=#268bd2
-colour.cyan=#2aa198
-colour.green=#859900
+#colour.base03=#002b36
+#colour.base02=#073642
+#colour.base01=#586e75
+#colour.base00=#657b83
+#colour.base0=#839496
+#colour.base1=#93a1a1
+#colour.base2=#eee8d5
+#colour.base3=#fdf6e3
+#colour.yellow=#b58900
+#colour.orange=#cb4b16
+#colour.red=#dc322f
+#colour.magenta=#d33682
+#colour.violet=#6c71c4
+#colour.blue=#268bd2
+#colour.cyan=#2aa198
+#colour.green=#859900
 
-style.*.32=$(font.base),back:#001010,fore:#93a1a1
-style.*.33=back:#C0C0C0,$(font.base)
-style.*.37=fore:#939393
-caret.fore=#FFFFFF
-selection.alpha=75
-selection.back=#FFFFFF
-colour.keyword=fore:#649bff
-colour.operator=fore:#727272
+#style.*.32=$(font.base),back:#001010,fore:#93a1a1
+#style.*.33=back:#C0C0C0,$(font.base)
+#style.*.37=fore:#939393
+#caret.fore=#FFFFFF
+#selection.alpha=75
+#selection.back=#FFFFFF
+#colour.keyword=fore:#649bff
+#colour.operator=fore:#727272
 
-style.errorlist.32=$(font.small),back:#000000
-style.errorlist.0=fore:#FFFFFF
+#style.errorlist.32=$(font.small),back:#000000
+#style.errorlist.0=fore:#FFFFFF
 
 
 
