--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/build.gradle
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/build.gradle
@@ -26,8 +26,8 @@ android {
         applicationId "com.csounds.Csound6"
         minSdkVersion 22
         targetSdkVersion 28
-        versionCode 21
-        versionName '6.13.0'
+        versionCode 22
+        versionName '6.14.0 beta'
         multiDexEnabled true
     }
     buildTypes {
