Render Slippery Chicken pieces with Csound (#107).

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -941,4 +941,5 @@ command.7.*=csound "$(FilePath)" -o$(FilePath).wav && python /home/mkg/csound-ex
 command.build.$(file.patterns.tex)=pdflatex -synctex=1 --shell-escape -interaction=nonstopmode $(FileNameExt)
 command.go.$(file.patterns.tex)=xdg-open $(FileName).pdf
 
+command.go.*.py=python3 -u "$(FileNameExt)"
 
