Updating with bformdec2 (#110).

--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "CsoundForAndroid/ndk-libraries/ecl"]
 	path = CsoundForAndroid/ndk-libraries/ecl
 	url = https://gitlab.com/embeddable-common-lisp/ecl.git
+[submodule "dependencies/bformdec2"]
+	path = dependencies/bformdec2
+	url = https://github.com/pzinemanas/bformdec2.git
