--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -215,6 +215,7 @@ add_custom_target(doxygen_reference
 
 add_subdirectory(Opcodes/cmask)
 add_subdirectory(Opcodes/LuaCsound)
+add_subdirectory(Opcodes/bformdec2)
 add_subdirectory(CsoundAC)
 ExternalProject_Add(CsoundNode
     SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/csound.node"
@@ -243,7 +244,7 @@ if(NOT DISTRO_CODENAME)
   endif()
 endif()
 
-set(CPACK_COMPONENTS_ALL csound-base csound-html5 csound-node csound-cmask csound-luajit)
+set(CPACK_COMPONENTS_ALL csound-base csound-html5 csound-node csound-cmask csound-luajit csound-bformdec2)
 set(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE "OFF")
 set(CPACK_GENERATOR TGZ; DEB)
 set(CPACK_PACKAGE_CONTACT "${CPACK_DEBIAN_PACKAGE_MAINTAINER}")
