--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -257,217 +257,9 @@ lexer.errorlist.value.separate=1
 
 ## CUSTOMIZATION OF VISUAL THEME
 
-###
-#  scite dark theme
-#  append to end of SciTEGlobal.properties
-#  or place to SciTEUser.properties
-#  Robert Wang
-#  Nov 15, 2017
-
-#  GUI  
 
 
-# Misc colours
-fold.margin.colour=#505050
-fold.margin.highlight.colour=#101010
-whitespace.fore=#508050
-selection.back=#FFFFFF
-caret.fore=#FFFFFF
-# Additional caret and selection settings
-selection.alpha=50
-caret.line.back=#E8E8FF
-caret.line.back.alpha=20
 
-# Give symbolic names to the set of colours used in the standard styles.
-colour.code.comment.box=fore:#CCFFCC,back:#202020
-colour.code.comment.line=fore:#D0F0D0
-colour.code.comment.doc=fore:#D0F0D0
-colour.text.comment=fore:#0000FF,back:#010101
-colour.other.comment=fore:#A0C0C0
-colour.embedded.comment=back:#010101
-colour.embedded.js=fore:#80B040,back:#010101
-colour.notused=back:#FF0000
-colour.number=fore:#FF99AA
-colour.keyword=fore:#00A0C0
-colour.keyword2=fore:#B99C4C
-colour.keyword3=fore:#7788DD
-colour.string=fore:#096283
-colour.char=fore:#096283
-colour.operator=fore:#F0E0B0
-colour.preproc=fore:#D0D000
-colour.error=fore:#FFFF00,back:#010101
-
-# Global default styles for all languages
-# Default
-style.*.32=$(font.base),back:#101010,fore:#BBBBDD
-# Line number
-style.*.33=$(font.base),back:#101010
-# Brace highlight
-style.*.34=fore:#FFFFEE,bold
-# Brace incomplete highlight
-style.*.35=fore:#FF0000,bold
-# Control characters
-style.*.36=
-# Indentation guides
-style.*.37=fore:#507050
-
-# Comment italique
-style.*.1=$(colour.code.comment.box),$(font.code.comment.box),italics
-style.*.2=$(colour.code.comment.line),$(font.code.comment.line),italics
-style.*.3=$(colour.code.comment.doc),$(font.code.comment.doc),italics
-
-# White space
-style.*.0=fore:#808080
-# Number
-style.*.4=$(colour.number)
-
-# Keyword
-style.cpp.5=$(colour.keyword),bold
-
-# Double quoted string
-style.*.6=$(colour.string)
-# Single quoted string
-style.*.7=$(colour.char)
-# UUIDs (only in IDL)
-style.*.8=fore:#7F7F00
-# Preprocessor
-style.*.9=$(colour.preproc)
-# Operators
-style.*.10=$(colour.operator)
-
-# Identifiers
-style.*.11=fore:#d0F0D0,back:#101010
-# End of line where string is not closed
-style.*.12=$(colour.string),back:#5A5050,eolfilled
-# Verbatim strings for C#
-style.*.13=$(colour.string),back:#5A5050,eolfilled
-# Regular expressions for JavaScript
-style.*.14=$(colour.string),back:#5A5050,eolfilled
-# Doc Comment Line
-style.*.15=$(colour.code.comment.doc),$(font.code.comment.doc)
-# Keywords2
-style.*.16=$(colour.keyword2)
-# Comment keyword
-style.*.17=fore:#3060A0,$(font.code.comment.doc)
-# Comment keyword error
-style.*.18=fore:#804020,$(font.code.comment.doc)
-# Braces are only matched in operator style
-braces.*.style=10
-
-# Makefile styles
-# Default
-style.makefile.0=$(font.base)
-# Comment: #
-style.makefile.1=$(colour.code.comment.box),$(font.comment),italics
-comment.block.makefile=#~
-# Pre-processor or other comment: !
-style.makefile.2=$(colour.preproc)
-# Variable: $(x)
-style.makefile.3=fore:#9F9F20
-# Operator
-style.makefile.4=$(colour.operator)
-# Target
-style.makefile.5=$(colour.preproc)
-# Error
-style.makefile.9=$(colour.error),eolfilled
-# Matched Operators
-style.makefile.34=fore:#FF6030,bold
-style.makefile.35=fore:#FF0000,bold
-
-# Batch styles
-# Default
-style.batch.0=$(font.base)
-# Comment (rem or ::)
-style.batch.1=$(colour.code.comment.box),$(font.comment),italics
-# Keywords
-style.batch.2=$(colour.keyword),bold
-# Label (line beginning with ':')
-style.batch.3=$(colour.preproc),back:#494949,eolfilled
-# Hide command character ('@')
-style.batch.4=$(colour.preproc)
-# External commands
-style.batch.5=fore:#007090,$(font.monospace),bold
-# Variable: %%x (x is almost whatever, except space and %), %n (n in [0-9]), %EnvironmentVar%
-style.batch.6=$(font.base)
-# Operator: * ? < > |
-style.batch.7=$(colour.operator)
-
-# Bash styles
-# Default
-style.bash.32=$(font.base)
-# White space
-style.bash.0=fore:#808080,$(font.base)
-# Error
-style.bash.1=$(colour.error)
-# Comment
-style.bash.2=$(colour.code.comment.box),$(font.comment),italics
-# Number
-style.bash.3=$(colour.number)
-# Keyword
-style.bash.4=$(colour.keyword),bold
-# Double quoted string
-style.bash.5=$(colour.string),$(font.monospace)
-# Single quoted string
-style.bash.6=$(colour.char),$(font.monospace)
-# Operators
-style.bash.7=$(colour.operator),bold
-# Identifiers (functions, etc.)
-style.bash.8=$(font.base)
-# Scalars: $var
-style.bash.9=fore:#000000,back:#FFE0E0
-# Parameter expansion: ${var}
-style.bash.10=fore:#000000,back:#FFFFE0
-# Back Ticks
-style.bash.11=fore:#FFFF00,back:#A08080
-# Here-doc (delimiter)
-style.bash.12=fore:#000000,back:#DDD0DD
-# Here-doc (single quoted, q)
-style.bash.13=fore:#7F007F,back:#DDD0DD,eolfilled,notbold
-# Braces are only matched in operator style
-braces.bash.style=7
-
-# PHP
-# Default
-style.hypertext.118=$(font.base)
-# Matching braces
-style.hypertext.34=$(font.base)
-# Not maching braces
-style.hypertext.35=$(coulour.error)
-# Double quoted String
-style.hypertext.119=$(colour.string)
-# Single quoted string
-style.hypertext.120=$(colour.char)
-# Keyword
-style.hypertext.121=$(colour.keyword)
-# Number
-style.hypertext.122=$(colour.number)
-# Variable
-style.hypertext.123=$(colour.keyword2)
-# Comment
-style.hypertext.124=$(colour.code.comment.box)
-# One line comment
-style.hypertext.125=$(colour.code.comment.box)
-# PHP variable in double quoted string
-style.hypertext.126=$(colour.other)
-# PHP operator
-style.hypertext.127=$(font.base)
-
-# Text
-style.hypertext.0=$(font.base)
-# Tags
-style.hypertext.1=$(colour.keyword3)
-# Unknown Tags
-style.hypertext.2=fore:#FF0000
-# Attributes
-style.hypertext.3=fore:#008080
-# Unknown Attributes
-style.hypertext.4=fore:#FF0000
-
-# output window
-style.errorlist.32=$(font.small),back:#000000
-style.errorlist.0=fore:#FFFFFF
-style.errorlist.2=fore:#0FFFFF
-style.errorlist.4=fore:#FFFFFF
 
 ## CUSTOMIZATION OF GO AND TOOL COMMANDS
 
@@ -915,7 +707,7 @@ command.subsystem.*.csd=0
 # If other libraries turn out to be needed just stick them on the link line here.
 
 command.name.0.*=Build C++ piece
-command.0.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm
+command.0.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lGamma -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm
 command.name.1.*=Render C++ piece to audio
 command.1.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --audio PortAudio --device dac
 command.name.2.*=Render C++ piece to soundfile
