--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -716,17 +716,20 @@ command.name.3.*=Render C++ piece to soundfile and post-process
 command.3.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post
 command.name.4.*=Render C++ piece to soundfile and post-process and play 
 command.4.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post --playwav audacity
+command.name.5.*=Build Csound C++ plugin opcode
+command.5.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/include/csound -lGamma -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm
+
 
 # Custom commands for running Csound to dac or soundfile with or without post-processing.
 # It is assumed that the csd filename + .wav becomes the output soundfile and that the root 
 # of the csd filename, with - or _ replaced by spaces, is the title of the piece.
 
-command.name.5.*=Render csd piece to audio
-command.5.*=csound "$(FilePath)" -odac
-command.name.6.*=Render csd piece to soundfile and play
-command.6.*=csound "$(FilePath)" -o$(FilePath).wav && audacity $(FilePath).wav
-command.name.7.*=Render csd piece to soundfile and post-process and play 
-command.7.*=csound "$(FilePath)" -o$(FilePath).wav && python /home/mkg/csound-extended/post-process.py $(FilePath).wav
+command.name.6.*=Render csd piece to audio
+command.6.*=csound "$(FilePath)" -odac
+command.name.7.*=Render csd piece to soundfile and play
+command.7.*=csound "$(FilePath)" -o$(FilePath).wav && audacity $(FilePath).wav
+command.name.8.*=Render csd piece to soundfile and post-process and play 
+command.8.*=csound "$(FilePath)" -o$(FilePath).wav && python /home/mkg/csound-extended/post-process.py $(FilePath).wav
 
 # Always run pdflatex to compile LaTeX.
 
