--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -717,7 +717,7 @@ command.3.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/i
 command.name.4.*=Render C++ piece to soundfile and post-process and play 
 command.4.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post --playwav audacity
 command.name.5.*=Build Csound C++ plugin opcode
-command.5.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -O2 -g "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/include/csound -lGamma -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm
+command.5.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include -I/usr/include/python3.6m -I/usr/include/luajit-2.1 -g "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/include/csound -lGamma -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lecl -lluajit-5.1 -lpython3.6m -lgc -lpthread -ldl -lm
 
 
 # Custom commands for running Csound to dac or soundfile with or without post-processing.
